examples/invalid/unsupported_conclusion.jd
justification j {
    conclusion c is "The system is correct"
    strategy s is "Testing"
    evidence e is "Test results"
    e supports s
}
